Fix: Problem with display, content in main element was going behind the navigation when the browser was resixed.

--- a/css/admin.css
+++ b/css/admin.css
@@ -18,11 +18,6 @@ header#mainHeader>div#headerText {
     font-size: 14pt;
 }
 
-/* Main */
-main {
-    margin: 1% 8% 1% 13%; /* Different margin style for admin side */
-}
-
 main>section {
     margin-top: 1%;
 }
