--- a/css/shop.css
+++ b/css/shop.css
@@ -9,7 +9,7 @@
 header#mainHeader>canvas#headerLogo {
     float: left;
     width: 150px;
-    height: 75px;
+    height: 49px;
     cursor: pointer;
 }
 
@@ -30,10 +30,6 @@ header#mainHeader>div#headerSearch button {
 }
 
 /* Main */
-main {
-    margin: 1% 8% 1% 2%;
-}
-
 main>section#featured>header, main>section#products>header, main>section#basket>header, main>section#order>header, main>section#confirm>header {
     font-size: 18pt;
     font-weight: bold;
